--- a/pages/privacidade.html
+++ b/pages/privacidade.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Em breve, o Player da Web do KingDomfy permitirá que você ouça suas músicas favoritas diretamente no navegador. Fique atento para o lançamento!">
-  <title>KingDomfy - Player da Web</title>
+  <meta name="description" content="Conheça a Política de Privacidade do KingDomfy. Saiba como seus dados são protegidos enquanto você curte suas músicas favoritas.">
+  <title>KingDomfy - Privacidade</title>
   <link rel="icon" href="../src/imagens/favicon.png">
   <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
   <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
   <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
 </head>
-<body id="player-da-web" data-base="../">
+<body id="privacidade" data-base="../">
   <div id="header-placeholder"></div>
   <main class="caixa">
     <div class="container">
-      <div class="conteudo-interno text-center">
-        <h2 class="mb-4">Player da Web</h2>
-        <p class="lead">Em breve, você poderá ouvir suas músicas favoritas diretamente no navegador. Nosso player da web está em desenvolvimento e será lançado em breve. Fique atento!</p>
-        <div class="mt-5">
-          <i class="fas fa-music fa-5x text-white"></i>
-          <p class="mt-4">O som está chegando...</p>
+      <div class="conteudo-interno">
+        <div class="row">
+          <div class="col-md-12">
+            <h2>Política de Privacidade</h2>
+            <p>O KingDomfy é um projeto de código aberto e não coleta informações pessoais dos usuários. Sua privacidade é nossa prioridade.</p>
+          </div>
         </div>
       </div>
     </div>
