--- a/pages/legal.html
+++ b/pages/legal.html
@@ -19,9 +19,36 @@
         <div class="row">
           <div class="col-md-12">
             <h2>Termos de Uso</h2>
-            <p>Este projeto é um clone didático do Spotify e não possui fins lucrativos. O uso é restrito para fins educacionais.</p>
-            <h2 id="privacy">Política de Privacidade</h2>
-            <p>Não coletamos informações pessoais dos usuários.</p>
+            <p><strong>Última atualização:</strong> 23 de maio de 2024</p>
+
+            <h2>1. Aceitação dos Termos</h2>
+            <p>Ao acessar e usar o KingDomfy (doravante "Serviço"), você concorda em cumprir e estar vinculado a estes Termos de Uso. Se você não concordar com estes termos, não deverá usar o Serviço.</p>
+
+            <h2>2. Descrição do Serviço</h2>
+            <p>O KingDomfy é um clone didático da plataforma Spotify, desenvolvido para fins educacionais e de portfólio. O Serviço não possui fins lucrativos e seu uso é restrito a esses fins.</p>
+
+            <h2>3. Propriedade Intelectual</h2>
+            <p>Todo o conteúdo presente no Serviço, incluindo, mas não se limitando a, textos, gráficos, logotipos, ícones, imagens, clipes de áudio, downloads digitais e software, é de propriedade do KingDomfy ou de seus licenciadores e é protegido por leis de direitos autorais. As marcas e logotipos do Spotify são de propriedade do Spotify AB.</p>
+
+            <h2>4. Uso Permitido</h2>
+            <p>Você pode usar o Serviço apenas para fins pessoais e não comerciais. Você concorda em não:</p>
+            <ul>
+              <li>Modificar, copiar, distribuir, transmitir, exibir, executar, reproduzir, publicar, licenciar, criar trabalhos derivados, transferir ou vender qualquer informação, software, produto ou serviço obtido do Serviço.</li>
+              <li>Usar o Serviço para qualquer finalidade ilegal ou proibida por estes Termos.</li>
+              <li>Usar qualquer robô, spider, outro dispositivo automático ou processo manual para monitorar ou copiar qualquer conteúdo do Serviço.</li>
+            </ul>
+
+            <h2>5. Isenção de Garantias</h2>
+            <p>O Serviço é fornecido "como está" e "conforme disponível". O KingDomfy não oferece garantias de qualquer tipo, expressas ou implícitas, sobre a operação do Serviço ou as informações, conteúdo, materiais ou produtos incluídos no Serviço. Você concorda expressamente que o uso do Serviço é por sua conta e risco.</p>
+
+            <h2>6. Limitação de Responsabilidade</h2>
+            <p>Em nenhuma circunstância o KingDomfy será responsável por quaisquer danos de qualquer tipo decorrentes do uso do Serviço, incluindo, mas não se limitando a, danos diretos, indiretos, incidentais, punitivos e consequenciais.</p>
+
+            <h2>7. Alterações nos Termos</h2>
+            <p>O KingDomfy reserva-se o direito de alterar estes Termos a qualquer momento. A data da última atualização será sempre indicada no topo desta página. Recomendamos que você revise os Termos periodicamente para estar ciente de quaisquer alterações.</p>
+
+            <h2>8. Contato</h2>
+            <p>Se você tiver alguma dúvida sobre estes Termos, entre em contato conosco através do nosso <a href="suporte.html">canal de suporte</a>.</p>
           </div>
         </div>
       </div>
@@ -31,7 +58,6 @@
   <script src="../vendor/jquery/jquery.min.js"></script>
   <script src="../vendor/popper/popper.min.js"></script>
   <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="../src/js/app.js" defer></script>
   <script src="../src/js/template-loader.js" defer></script>
 </body>
 </html>
