--- a/pages/privacidade.html
+++ b/pages/privacidade.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Conheça a Política de Privacidade do KingDomfy. Saiba como seus dados são protegidos enquanto você curte suas músicas favoritas.">
-  <title>KingDomfy - Privacidade</title>
+  <title>KingDomfy - Política de Privacidade</title>
   <link rel="icon" href="../src/imagens/favicon.png">
   <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
@@ -19,7 +19,40 @@
         <div class="row">
           <div class="col-md-12">
             <h2>Política de Privacidade</h2>
-            <p>O KingDomfy é um projeto de código aberto e não coleta informações pessoais dos usuários. Sua privacidade é nossa prioridade.</p>
+            <p><strong>Última atualização:</strong> 23 de maio de 2024</p>
+
+            <p>O KingDomfy ("nós", "nosso") é um projeto de clone didático do Spotify e está comprometido em proteger a sua privacidade. Esta Política de Privacidade explica como lidamos com as informações dos usuários em nosso site.</p>
+
+            <h2>1. Informações que Coletamos</h2>
+            <p>Como um projeto didático, <strong>não coletamos intencionalmente informações de identificação pessoal</strong> de nossos usuários, tais como nome, endereço de e-mail, número de telefone ou informações de pagamento. O uso do KingDomfy é anônimo e não requer a criação de uma conta pessoal.</p>
+
+            <h2>2. Uso de Cookies e Armazenamento Local</h2>
+            <p>Podemos usar cookies e tecnologias de armazenamento local para melhorar a experiência do usuário. Essas tecnologias são usadas para:</p>
+            <ul>
+              <li>Lembrar de suas preferências (como o volume do player).</li>
+              <li>Manter o estado da sua sessão de navegação.</li>
+            </ul>
+            <p>Os dados armazenados são mantidos apenas no seu navegador e não são transmitidos para nossos servidores.</p>
+
+            <h2 id="lgpd">3. Lei Geral de Proteção de Dados (LGPD)</h2>
+            <p>O KingDomfy respeita os princípios da Lei Geral de Proteção de Dados (LGPD - Lei nº 13.709/2018) do Brasil. Embora não coletemos dados pessoais, reafirmamos nosso compromisso com a proteção de dados e a privacidade. Em conformidade com a LGPD, garantimos os seguintes direitos aos nossos usuários:</p>
+            <ul>
+              <li><strong>Direito de Confirmação e Acesso:</strong> Você tem o direito de confirmar se tratamos algum dado seu e de acessá-lo. Como não coletamos dados pessoais, podemos confirmar que nenhum dado seu é tratado por nós.</li>
+              <li><strong>Direito de Correção:</strong> Você pode corrigir dados incompletos, inexatos ou desatualizados. Como não há dados armazenados em nossos servidores, não há o que corrigir.</li>
+              <li><strong>Direito de Anonimização, Bloqueio ou Eliminação:</strong> Como não coletamos dados, não há o que anonimizar, bloquear ou eliminar.</li>
+              <li><strong>Direito à Portabilidade:</strong> Este direito não se aplica, pois não há dados a serem portados.</li>
+              <li><strong>Direito de Eliminação:</strong> Os dados de navegação e preferências podem ser eliminados por você ao limpar os dados do seu navegador.</li>
+              <li><strong>Direito à Informação:</strong> Fornecemos esta Política de Privacidade para informar sobre o tratamento (ou não tratamento) de dados.</li>
+            </ul>
+
+            <h2>4. Links para Outros Sites</h2>
+            <p>Nosso Serviço pode conter links para outros sites que não são operados por nós. Se você clicar em um link de terceiros, será direcionado para o site desse terceiro. Recomendamos vivamente que reveja a Política de Privacidade de todos os sites que visitar.</p>
+
+            <h2>5. Alterações a Esta Política de Privacidade</h2>
+            <p>Podemos atualizar nossa Política de Privacidade de tempos em tempos. Notificaremos sobre quaisquer alterações, publicando a nova Política de Privacidade nesta página e atualizando a data da "Última atualização".</p>
+
+            <h2>6. Fale Conosco</h2>
+            <p>Se tiver alguma dúvida sobre esta Política de Privacidade, entre em contato conosco através do nosso <a href="suporte.html">canal de suporte</a> ou visite nosso <a href="centro-de-privacidade.html">Centro de Privacidade</a>.</p>
           </div>
         </div>
       </div>
@@ -29,7 +62,6 @@
   <script src="../vendor/jquery/jquery.min.js"></script>
   <script src="../vendor/popper/popper.min.js"></script>
   <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="../src/js/app.js" defer></script>
   <script src="../src/js/template-loader.js" defer></script>
 </body>
 </html>
