--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/popper/popper.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+  <script src="../src/js/app.js" defer></script>
   <script src="src/js/template-loader.js" defer></script>
 </body>
 </html>
